public/style.css
/* ... */
.center{
    text-align: center;
}
.hidden{
    display: none;
}
.primary{
    width: fit-content;
    height: 100%;
}
.flex{
    display: flex;
    align-items: center;
    justify-content: center;
    flex-wrap: wrap;
    gap: var(--spacing3);
}
.flex2{
    display: flex;
    align-items: center;
    justify-content: space-between;
    gap: var(--spacing3);
}
.flex3{
    display: flex;
    flex-wrap: wrap;
    align-items: center;
    justify-content: center;
    gap: var(--spacing5);
}
.grid{
    display: grid;
    grid-template-columns: 1fr 1fr; /* 2 equal columns */
    gap: 2rem;
    align-items: center;
}
.grid2{
    display: grid;
    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr)); /* Responsive grid */
    gap: 100px;
    align-items: center;
    text-align: center;
    justify-content: top;
}
.grid2 > *{
    min-width: 200px;
    height: 100%;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: start;
}
.column{
    display: flex;
    max-width: 90%;
    flex-direction: column;
}
.column2{
    width: min(1000px, 100%);
    margin: 0 auto;
    height: fit-content;
    columns: 4 300px;
    column-gap: 3em;
}
.column2 >*{
    height: fit-content;
    display: block;
    height: fit-content;
    margin-bottom: var(--spacing5);
}
flex > *, .grid > *{
    flex: 1;
    min-width: 200px;
    display: flex;
    flex-direction: column;
    align-items: left;
    justify-content: center;
}
.justify-center{
    justify-content: center;
}
.justify-top{
    justify-content: top;
}
.align-top{
    align-items: top;
}
.reverse {
    display: grid;
    grid-template-columns: 1fr 1fr; /* 2 equal columns */
}
.reverse > *:first-child {
    order: 2; /* Move the first child to the second position */
}
.padding1{
    padding: var(--spacing1) 0;
}
.padding2{
    padding: var(--spacing2) 0;
}
.padding3{
    padding: var(--spacing3) 0;
}
.padding4{
    padding: var(--spacing4) 0;
}
.padding5{
    padding: var(--spacing5) 0;
}
.padding6{
    padding: var(--spacing6) 0;
}
.padding7{
    padding: var(--spacing7) 0;
}
.padding-top1{
    padding-top: var(--spacing6);
}
.padding-bottom1{
    padding-bottom: var(--spacing6);
}

.margin1{
    margin: var(--spacing1) auto;
}
.margin2{
    margin: var(--spacing2) auto;
}
.margin3{
    margin: var(--spacing3) auto;
}
.margin4{
    margin: var(--spacing4) auto;
}
.margin5{
    margin: var(--spacing5) auto;
}
.margin6{
    margin: var(--spacing6) auto;
}
.margin7{
    margin: var(--spacing7) auto;
}

/*unique margin classes*/
.margin8{
    margin-top: var(--spacing7);
}
.margin9{
    margin: var(--spacing3) auto var(--spacing6) auto;
}


.background2{
    background: var(--color2);
    max-width: 80%;
}
.color2{
    color: var(--background);
}
.border-radius{
    border-radius: 20px;
}
.border-radius-1{
    border-radius: 100%;
}
.border-radius-2{
    border-radius: 50px;
}
.clip-path{
    clip-path: polygon(20% 0%, 100% 25%, 80% 100%, 0% 100%, 20% 25%);
}
.cp2{
clip-path: polygon(50% 0%, 60% 15%, 100% 25%, 90% 50%, 
                   100% 75%, 60% 85%, 50% 100%, 40% 85%, 
                   0 75%, 10% 50%, 0 25%, 40% 15%);

}

/*box-shadow classes*/
.box-shadow1{
    box-shadow: var(--box-shadow1);
}
.box-shadow2{
    box-shadow: var(--box-shadow2);
}

/*width classes*/
.w-90{
    max-width: 90%;
    width: 90%;
}
.w-80{
    width: 80%;
}
.w-70{
    width: 70%;
}

.w-200px{
    width: 200px;
}
.w-300px{
    width: 300px;
}
.w-400px{
    width: 400px;
}
/*height classes*/
.h-200px{
    height: 200px;
    max-height: min-content;
}
.h-300px{
    height: 300px;
    max-height: min-content;
}
.h-400px{
    height: 400px;
}

/*size classes*/
.s-100px{
    width: 100px;
    height: 150px;
}
.s-200px{
    width: 200px;
    height: 250px;
}
.s-300px{
    width: 300px;
    height: 350px;
}
/*icon size*/
.i-50px{
    width: 50px;
    height: 50px;
}
.i-100px{
    width: 100px;
    height: 100px;
}
.i-200px{
    width: 200px;
    height: 200px;
}
.i-300px{
    width: 300px;
    height: 300px;
}

/* header */
header{
    width: 100%;
    max-width: 100%;
    margin: 0 auto;
    display: flex;
    align-items: center;
    justify-content: flex-start;
    top: 0;
    position: fixed;
    padding: 10px 20px  10px 0px;
    background: var(--colorDefault2);
}
.nav-links, .auth-buttons{
    display: flex;
    align-items: center;
    gap: var(--spacing3);
}
nav {
    display: flex;
    align-items: center;
    gap: var(--spacing5);
    padding: var(--spacing3) var(--spacing4);
    max-width: 100%;
}
nav a{
    color:var(--color2);
}
nav a:hover{
    color: var(--color3);
}
.hamburger{
    display: none;
    width: 40px;
    height: 40px;
    border-radius: 10px;
}
nav.left-nav{
    margin-left: auto !important;
    gap: var(--spacing3);
}
.left-nav:nth-of-type(2){
    margin-left: 0;
}

/*footer*/
footer{
    display: flex;
    flex-wrap: wrap;
    justify-content: space-between;
    align-items: top;
    background: var(--color2);
    color: var(--background);
    padding: var(--spacing5);
    gap: var(--spacing5);

    .logo{
        color: var(--colorDefault2);
    }
    h3{
        line-height: 50px;
        color: var(--colorDefault2)
    }
}
.footer-left{
    flex: 1.5;
}
.footer-quick-links{
    display: flex;
    flex: 1;
    flex-direction: column;
}
.footer-quick-links ul{
        display: flex;
        flex-direction: column;
        gap: 15px;
        a{
        color: var(--background);
        }
        a:hover{
            color: var(--colorDefault2);
        }
    }
.footer-contact-info{
    flex: 1;
}    
.footer-right{
    display: flex;
    flex: 1;
    flex-direction: column;
    align-items: left;
}
.social-media-icons{
    display: flex;
    flex:1;
    gap: 20px;

    *{
        width: 30px;
    }
}
.copyright-text{
    min-width: max-content;
    width: 100%;
}
/* ... */

